hello-world/dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: httpd-ex
  name: httpd-ex
  namespace: test
spec:
  replicas: 1
  selector:
    deploymentconfig: httpd-ex
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: httpd-ex
        deploymentconfig: httpd-ex
    spec:
      containers:
      - imagePullPolicy: Always
        name: httpd-ex
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - httpd-ex
      from:
        kind: ImageStreamTag
        name: httpd-ex:latest
        namespace: test
    type: ImageChange
  - type: ConfigChange
