hello-world/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd-ex
  name: httpd-ex
  namespace: test
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: httpd-ex
  sessionAffinity: None
  type: ClusterIP
