hello-world/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: httpd-ex
  name: httpd-ex
  namespace: test
spec:
  host: httpd-ex-test.apps.openshift.jonasg.be
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: httpd-ex
    weight: 100
  wildcardPolicy: None
